add genericRepo,automate migration and seeding , seed categoryTable

--- a/Course-Management-System/CourseManagement.PL/Views/_ViewImports.cshtml
+++ b/Course-Management-System/CourseManagement.PL/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using CourseManagement.PL
-@using CourseManagement.PL.Models
+@using CourseManagement.DAL.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
